p word spacing fix attempt

--- a/styles.css
+++ b/styles.css
@@ -69,15 +69,12 @@ img{
 }
 
 p{
-    width:auto;
     font-family: "GB18030 Bitmap";
     font-weight: 100;
     color: aliceblue;
     text-align: center;
     padding-left: 50px;
     padding-right: 50px;
-    word-spacing: 20px;
-    
 }
 
 .navBar{
@@ -195,7 +192,7 @@ iframe{
 }
 
 div{
-    width: inherit;
+
 }
 
 .contact{
@@ -218,26 +215,6 @@ footer{
     word-spacing: 5px;
 }
 
-.typewriter p{
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid #E04A54; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em; /* Adjust as needed */
-  animation: 
-    typing 5s steps(80, end),
-    blink-caret 1s step-end infinite;
-}
 
-/* The typing effect */
-@keyframes typing {
-  from { width: 0% }
-  to { width: 100% }
-}
 
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from, to { border-color: transparent}
-  50% { border-color: #E04A54; }
-}
 
